--- a/backend/views/user/cancellation-refund.ejs
+++ b/backend/views/user/cancellation-refund.ejs
@@ -1006,120 +1006,128 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 </div>
 
+<footer class="footer footer_type_2 dark">
 
-   <footer class="footer footer_type_2 dark">
 
+  <div class="footer-middle container">
+    <div class="row row-cols-lg-5 row-cols-2">
+      <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0 d-flex flex-column align-items-center justify-content-center" style="min-height: 100%;">
+        <div class="mb-3">
+          <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
+        </div>
+        <p class="m-0 mb-2 text-center">
+          <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong
+              class="fw-medium">stayrareofficial@gmail.com</strong></a>
+        </p>
+        <p class="mb-0 text-center">
+          <a style="color: white;" href="tel:+916238669487">
+            <svg width="16" height="16" viewBox="0 0 24 24"
+              fill="white" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z" />
+            </svg>
+            <strong class="fw-medium">+91 62 38669 487</strong>
+          </a>
+        </p>
+      </div><!-- /.footer-column -->
 
-    <div class="footer-middle container">
-      <div class="row row-cols-lg-5 row-cols-2">
-        <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
- <div>
-  <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
- </div>
-   <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
-</p>
-          <p class="m-0">
-           <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
-          </p>
-          <p>
-<a style="color: white;" href="tel:+916238669487"> <svg width="16" height="16" viewBox="0 0 24 24"
-                fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z" />
+      <div class="footer-column footer-menu mb-4 mb-lg-0">
+        <h6 class="sub-menu__title text-uppercase">Company</h6>
+        <ul class="sub-menu__list list-unstyled">
+          <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
+          <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
+          <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
+          <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
+          <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
+        </ul>
+      </div><!-- /.footer-column -->
+
+      <div class="footer-column footer-menu mb-4 mb-lg-0">
+        <h6 class="sub-menu__title text-uppercase">Shop</h6>
+        <ul class="sub-menu__list list-unstyled">
+          <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">New Arrivals</a></li>
+          <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Best Deals</a></li>
+          <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Best Seller</a></li>
+          <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Top Rated</a></li>
+          <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Shop All</a></li>
+        </ul>
+      </div><!-- /.footer-column -->
+
+      <div class="footer-column footer-menu mb-4 mb-lg-0">
+        <h6 class="sub-menu__title text-uppercase">Help</h6>
+        <ul class="sub-menu__list list-unstyled">
+          <li class="sub-menu__item"><a href="/return_policy" class="menu-link menu-link_us-s">Return & Refund
+              Policy</a></li>
+          <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
+          <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms &
+              Conditions</a></li>
+          <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a>
+          </li>
+          <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a>
+          </li>
+
+        </ul>
+      </div><!-- /.footer-column -->
+      <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
+        <h5 class="sub-menu__title text-uppercase">Subscribe</h5>
+        <p>Don’t miss a drop get product alerts, restock updates, and more delivered directly to you!</p>
+        <form action="https://uomo-html.flexkitux.com/Demo2//"
+          class="footer-newsletter__form position-relative bg-body">
+          <input class="form-control border-white" type="email" name="email" placeholder="Your email address">
+          <input class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100" type="submit" value="JOIN">
+        </form>
+        <ul class="social-links list-unstyled d-flex flex-wrap mb-0 mt-3">
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block">
+              <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
+                xmlns="http://www.w3.org/2000/svg">
+                <use href="#icon_facebook" />
               </svg>
-              <strong class="fw-medium">+91 62 38669 487</strong></a>
-          </p>
-         
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com/" class="footer__social-link d-block">
+              <svg class="svg-icon svg-icon_x" width="14" height="13" viewBox="0 0 1200 1227"
+                xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                <path
+                  d="M 880 0 L 585 455 L 290 0 H 0 L 425 623 L 0 1227 H 290 L 585 772 L 880 1227 H 1170 L 745 623 L 1170 0 Z" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw=="
+              class="footer__social-link d-block">
+              <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
+                xmlns="http://www.w3.org/2000/svg">
+                <use href="#icon_instagram" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/" class="footer__social-link d-block">
+              <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z" />
+              </svg>
+            </a>
+          </li>
 
-         
-    
-        </div><!-- /.footer-column -->
+        </ul>
 
-        <div class="footer-column footer-menu mb-4 mb-lg-0">
-          <h6 class="sub-menu__title text-uppercase">Company</h6>
-          <ul class="sub-menu__list list-unstyled">
-            <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
-            <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
-         <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
-            <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
-            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
-          </ul>
-        </div><!-- /.footer-column -->
 
-        <div class="footer-column footer-menu mb-4 mb-lg-0">
-          <h6 class="sub-menu__title text-uppercase">Shop</h6>
-          <ul class="sub-menu__list list-unstyled">
-            <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">New Arrivals</a></li>
-            <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Best Deals</a></li>
-            <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Best Seller</a></li>
-            <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Top Rated</a></li>
-            <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">Shop All</a></li>
-          </ul>
-        </div><!-- /.footer-column -->
+      </div><!-- /.footer-column -->
+    </div><!-- /.row-cols-5 -->
+  </div><!-- /.footer-middle container -->
 
-        <div class="footer-column footer-menu mb-4 mb-lg-0">
-          <h6 class="sub-menu__title text-uppercase">Help</h6>
-          <ul class="sub-menu__list list-unstyled">
-               <li class="sub-menu__item"><a href="/return_policy" class="menu-link menu-link_us-s">Return & Refund Policy</a></li>
-            <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
-            <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
-            <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
+  <div class="footer-bottom">
+    <div class="container d-md-flex align-items-center">
+      <span class="footer-copyright me-auto">Copyright © 2025 StayRare. All Rights Reserved. 
+      </span>
 
-          </ul>
-        </div><!-- /.footer-column -->
-        <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
-          <h5 class="sub-menu__title text-uppercase">Subscribe</h5>
-          <p>Don’t miss a drop  get product alerts, restock updates, and more delivered directly to you!</p>
-          <form action="https://uomo-html.flexkitux.com/Demo2//" class="footer-newsletter__form position-relative bg-body">
-            <input class="form-control border-white" type="email" name="email" placeholder="Your email address">
-            <input class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100" type="submit" value="JOIN">
-          </form>
-                 <ul class="social-links list-unstyled d-flex flex-wrap mb-0 mt-3">
-            <li>
-              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
-<g fill="#fffcfc" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M17.525,9h-3.525v-2c0,-1.032 0.084,-1.682 1.563,-1.682h1.868v-3.18c-0.909,-0.094 -1.823,-0.14 -2.738,-0.138c-2.713,0 -4.693,1.657 -4.693,4.699v2.301h-3v4l3,-0.001v9.001h4v-9.003l3.066,-0.001z"></path></g></g>
-</svg>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.twitter.com/" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_x" width="14" height="13" viewBox="0 0 1200 1227" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-  <path d="M 880 0 L 585 455 L 290 0 H 0 L 425 623 L 0 1227 H 290 L 585 772 L 880 1227 H 1170 L 745 623 L 1170 0 Z"/>
-</svg>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
-               <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
-<g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M8,3c-2.757,0 -5,2.243 -5,5v8c0,2.757 2.243,5 5,5h8c2.757,0 5,-2.243 5,-5v-8c0,-2.757 -2.243,-5 -5,-5zM8,5h8c1.654,0 3,1.346 3,3v8c0,1.654 -1.346,3 -3,3h-8c-1.654,0 -3,-1.346 -3,-3v-8c0,-1.654 1.346,-3 3,-3zM17,6c-0.55228,0 -1,0.44772 -1,1c0,0.55228 0.44772,1 1,1c0.55228,0 1,-0.44772 1,-1c0,-0.55228 -0.44772,-1 -1,-1zM12,7c-2.757,0 -5,2.243 -5,5c0,2.757 2.243,5 5,5c2.757,0 5,-2.243 5,-5c0,-2.757 -2.243,-5 -5,-5zM12,9c1.654,0 3,1.346 3,3c0,1.654 -1.346,3 -3,3c-1.654,0 -3,-1.346 -3,-3c0,-1.654 1.346,-3 3,-3z"></path></g></g>
-</svg>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11" xmlns="http://www.w3.org/2000/svg"><path d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z"/></svg>
-              </a>
-            </li>
-      
-          </ul>
-
-     
-        </div><!-- /.footer-column -->
-      </div><!-- /.row-cols-5 -->
-    </div><!-- /.footer-middle container -->
-
-    <div class="footer-bottom">
-      <div class="container d-md-flex align-items-center">
-        <span class="footer-copyright me-auto">Copyright © 2025 StayRare. All Rights Reserved.  |  developed by Trivlogic Pvt Ltd
-
-</span>
-       
-      </div><!-- /.container d-flex align-items-center -->
-    </div><!-- /.footer-bottom container -->
-  </footer>
-  <!-- End Footer Type 1 -->
+    </div><!-- /.container d-flex align-items-center -->
+  </div><!-- /.footer-bottom container -->
+</footer>
 
   <!-- Mobile Fixed Footer -->
   <footer class="footer-mobile container w-100 px-5 d-md-none bg-body">
