--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -1598,28 +1598,24 @@
 
     <div class="footer-middle container">
       <div class="row row-cols-lg-5 row-cols-2">
-        <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
-          <div>
+        <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0 d-flex flex-column align-items-center justify-content-center" style="min-height: 100%;">
+          <div class="mb-3">
             <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
           </div>
-          <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
-</p>
-          <p class="m-0">
+          <p class="m-0 mb-2 text-center">
             <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong
                 class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
-          <p>
-            <a style="color: white;" href="tel:+916238669487"> <svg width="16" height="16" viewBox="0 0 24 24"
+          <p class="mb-0 text-center">
+            <a style="color: white;" href="tel:+916238669487">
+              <svg width="16" height="16" viewBox="0 0 24 24"
                 fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z" />
               </svg>
-              <strong class="fw-medium">+91 62 38669 487</strong></a>
+              <strong class="fw-medium">+91 62 38669 487</strong>
+            </a>
           </p>
-
-
-
-
         </div><!-- /.footer-column -->
 
         <div class="footer-column footer-menu mb-4 mb-lg-0">
@@ -1627,7 +1623,7 @@
           <ul class="sub-menu__list list-unstyled">
             <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
             <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
-              <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
+            <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
             <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
             <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
           </ul>
@@ -1647,11 +1643,15 @@
         <div class="footer-column footer-menu mb-4 mb-lg-0">
           <h6 class="sub-menu__title text-uppercase">Help</h6>
           <ul class="sub-menu__list list-unstyled">
-          <li class="sub-menu__item"><a href="/return_policy" class="menu-link menu-link_us-s">Return & Refund Policy</a></li>
+            <li class="sub-menu__item"><a href="/return_policy" class="menu-link menu-link_us-s">Return & Refund
+                Policy</a></li>
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
-            <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
-            <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
+            <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms &
+                Conditions</a></li>
+            <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a>
+            </li>
+            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a>
+            </li>
 
           </ul>
         </div><!-- /.footer-column -->
@@ -1682,7 +1682,8 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw=="
+                class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_instagram" />
@@ -1708,9 +1709,7 @@
 
     <div class="footer-bottom">
       <div class="container d-md-flex align-items-center">
-        <span class="footer-copyright me-auto">Copyright © 2025 StayRare. All Rights Reserved. | developed by Trivlogic
-          Pvt Ltd
-
+        <span class="footer-copyright me-auto">Copyright © 2025 StayRare. All Rights Reserved. 
         </span>
 
       </div><!-- /.container d-flex align-items-center -->
