--- a/backend/views/user/about.ejs
+++ b/backend/views/user/about.ejs
@@ -852,7 +852,7 @@
         <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
           <h5 class="sub-menu__title text-uppercase">Subscribe</h5>
           <p>Don’t miss a drop get product alerts, restock updates, and more delivered directly to you!</p>
-          <form action="https://uomo-html.flexkitux.com/Demo2//"
+          <form action="#"
             class="footer-newsletter__form position-relative bg-body">
             <input class="form-control border-white" type="email" name="email" placeholder="Your email address">
             <input class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100" type="submit" value="JOIN">
@@ -866,15 +866,7 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="https://www.twitter.com/" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_x" width="14" height="13" viewBox="0 0 1200 1227"
-                  xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-                  <path
-                    d="M 880 0 L 585 455 L 290 0 H 0 L 425 623 L 0 1227 H 290 L 585 772 L 880 1227 H 1170 L 745 623 L 1170 0 Z" />
-                </svg>
-              </a>
-            </li>
+         
             <li>
               <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw=="
                 class="footer__social-link d-block">
@@ -884,16 +876,7 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="https://www.youtube.com/" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z" />
-                </svg>
-              </a>
-            </li>
-
+         
           </ul>
 
 
